# pyprocessta

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  nohup.out  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: precommit_test.yml  release_me.yml
dev/: hypersweep_test.ipynb  refactor.ipynb
docs/: requirements.txt
docs/source/: api.rst  conf.py  getting_started.rst  index.rst
examples/: 20210508_df_for_scenarios.pkl  2_amp.pkl  2amp_pip_model  2amp_pip_model_reduced_feature_set  2amp_scaler.pkl  Untitled.ipynb  accumulated_local_effects.ipynb  amp_scaler.pkl  analyze_effects.ipynb  average_baseline.ipynb  causal_impact_analysis.ipynb  causal_impact_tcn.ipynb  causalimpact.pkl.REMOVED.git-id  co2_ammonia_model  co2_ammonia_model_reduced_feature_set  create_heatmap.py  definitions.py  detrending.csv  df_dropped.pkl  df_dropped_5min_resampled.pkl  eda_preprocessing.ipynb  fastai.ipynb  gbdt_model.ipynb  gluon_ts.ipynb  multivariate_model.pkl  multivariate_model_new.pkl  naive_gradient_boosting.ipynb  nohup.out  parse_cesar1.py  pip_model.pkl  pip_scaler.pkl  plot_scenarios.ipynb  plot_tcn_causalimpact.ipynb  results.pkl  run_hyperopt.py  run_scenarios.py  scenario_gbdt.py  step_times.pkl  tcn_causalimpact.py  time_series_model.ipynb  (+10 more)
examples/2amp_pip_model_reduced_feature_set_darts/: checkpoint_10.pth.tar
examples/co2_ammonia_model_reduced_feature_set_darts/: model_best_10.pth.tar
examples/final_model/: xgb_2amp.joblib
examples/new_scenarios_3/: slurm-8899954.out  slurm-8899955.out  slurm-8899956.out  slurm-8899957.out  slurm-8899958.out  slurm-8899959.out  slurm-8899960.out  slurm-8899961.out  slurm-8899962.out  slurm-8899963.out  slurm-8899964.out  slurm-8899965.out  slurm-8899966.out  slurm-8899967.out  slurm-8899968.out  slurm-8899969.out  (+39 more)
paper/: README.md  eda_preprocessing.ipynb  environment.yml  export_models.ipynb  gbdt_model.ipynb  loop_over_maps.py  parse_cesar1.py  run_scenarios.py  run_scenarios_new.py  tcn_causalimpact.py  train_model_on_all_data.ipynb  validate_model.ipynb  validate_model_moving_windows.ipynb
tests/: conftest.py
(+3243 files in other folders)
