[tool.poetry]
name = "pyprocessta"
version = "0.1.0"
description = "Python library for the analysis of time series data from chemical (engineering) processes"
authors = ["Kevin M. Jablonka <kevin.jablonka@epfl.ch>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
Sphinx = "^3.5.2"
sphinx-book-theme = "^0.0.40"
sphinx-autodoc-typehints = "^1.11.1"
sphinx-copybutton = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
