[tool.poetry]
name = "pyprocessta"
version = "0.1.0"
description = "Python library for the analysis of time series data from chemical (engineering) processes"
authors = ["Kevin M. Jablonka <kevin.jablonka@epfl.ch>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.0"
pandas = "1.1.0"
matplotlib = "^3.0.0"
tensorflow = {version = "^2.4.1", extras = ["causalimpact"]}
tfcausalimpact = {version = "^0.0.3", extras = ["causalimpact"]}
statsmodels = "^0.12.2"


[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
Sphinx = "^3.5.2"
sphinx-book-theme = "^0.0.40"
sphinx-autodoc-typehints = "^1.11.1"
sphinx-copybutton = "^0.3.1"
jupyter = "^1.0.0"
ipykernel = "^5.5.0"
jupyterlab = "^3.0.9"
SciencePlots = "^1.0.7"
openpyxl = "^3.0.0"
seaborn = "^0.11.1"
pylint = "^2.7.2"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
